--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.3.3",
     "@nestjs/platform-express": "^10.0.0",
+    "nats": "^2.19.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
