Add provider contract test for header

--- a/infra/k8s/pact-broker.yaml
+++ b/infra/k8s/pact-broker.yaml
@@ -39,5 +39,9 @@ spec:
           value: "pact-postgres"
         - name: PACT_BROKER_DATABASE_NAME
           value: "postgres"
+        - name: PACT_BROKER_BASIC_AUTH_USERNAME
+          value: "vukstefanovic97"
+        - name: PACT_BROKER_BASIC_AUTH_PASSWORD
+          value: "test1234"
         ports:
         - containerPort: 9292
