--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,7 +3,11 @@ FROM node:alpine
 ARG service
 ENV service=$service
 
+RUN apk add --no-cache make gcc g++ python3 py3-pip
+
 WORKDIR /app
 COPY . .
+
+RUN npm rebuild bcrypt --build-from-source
 
 CMD npm run start:dev -- "$service"
