--- a/infra/k8s/account.yaml
+++ b/infra/k8s/account.yaml
@@ -15,6 +15,15 @@ spec:
       containers:
         - name: account
           image: account-service
+          env:
+           - name: JWT_SECRET
+             value: 2813d2ae3c3af50fc146ac27efc605a33f7702736d574af19c8b9c0d2c09b08b
+           - name: POSTGRES_DB
+             value: account-db
+           - name: POSTGRES_USER
+             value: vuk
+           - name: POSTGRES_PASSWORD
+             value: test1234
 ---
 apiVersion: v1
 kind: Service
